--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chromedriver": "^79.0.0",
+    "geckodriver": "^1.19.1",
     "nightwatch": "^1.3.2"
   }
 }
